fixtures/cs-enc-04/bad/aes-128-ecb-cipheriv.ts
import { createCipheriv } from "crypto";
export function encrypt(data: Buffer, key: Buffer, iv: Buffer) {
	return createCipheriv("aes-128-ecb", key, iv);
}
